--- a/src/Podfile
+++ b/src/Podfile
@@ -3,6 +3,7 @@
 
 target 'WageKeeper' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
+  platform :ios, '10.0'
   use_frameworks!
 
   # Pods for WageKeeper
@@ -13,5 +14,8 @@ target 'WageKeeper' do
   pod 'FacebookCore'
   pod 'FacebookLogin'
   pod 'KTLoadingLabel'
+  pod 'EMSpinnerButton'
+  pod 'PasswordTextField'
+
 
 end
